[gd_scene load_steps=11 format=2]

[ext_resource path="res://game_fonts/lmroman25.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/character_display/MultipleCharacterDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/scene_transition/SceneTransitionRect.tscn" type="PackedScene" id=6]
[ext_resource path="res://multiplayer/MultiplayerCharSelection.gd" type="Script" id=7]
[ext_resource path="res://multiplayer/OnlineChat.gd" type="Script" id=8]
[ext_resource path="res://fonts/LMROMAN10-BOLD.OTF" type="DynamicFontData" id=9]
[ext_resource path="res://scenes/character_display/AdvancedCharacterDisplay.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 9 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/LMROMAN10-REGULAR.OTF"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 2 )

[node name="MultiplayerCharacterSelection" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1
color = Color( 0.196078, 0.380392, 0.176471, 0.423529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="self_char_info" parent="." instance=ExtResource( 10 )]
margin_top = 65.0
margin_bottom = 865.0

[node name="MultipleCharacterDisplay" parent="." instance=ExtResource( 2 )]
margin_left = 1416.0
margin_top = 65.0
margin_right = -40.0
margin_bottom = -217.0
mouse_filter = 1

[node name="character_windows" type="HBoxContainer" parent="."]
margin_right = 1925.0
margin_bottom = 1076.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_info" type="VBoxContainer" parent="."]
margin_left = 408.0
margin_right = 1489.0
margin_bottom = 1076.0
custom_constants/separation = 794
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="vbox_info"]
margin_right = 1081.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Rêves distants"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="vbox_info"]
margin_top = 859.0
margin_right = 1081.0
margin_bottom = 1073.0
custom_constants/separation = 9

[node name="CenterContainer" type="CenterContainer" parent="vbox_info/VBoxContainer"]
margin_right = 1081.0
margin_bottom = 156.0

[node name="characters" type="ItemList" parent="vbox_info/VBoxContainer/CenterContainer"]
margin_left = 155.0
margin_right = 925.0
margin_bottom = 156.0
rect_min_size = Vector2( 770, 156 )
custom_constants/vseparation = 6
custom_constants/icon_margin = 5
custom_constants/hseparation = 20
max_columns = 5
same_column_width = true
fixed_icon_size = Vector2( 128, 128 )

[node name="HBoxContainer" type="HBoxContainer" parent="vbox_info/VBoxContainer"]
margin_top = 165.0
margin_right = 1081.0
margin_bottom = 214.0
custom_constants/separation = 28
alignment = 1

[node name="play_button" type="Button" parent="vbox_info/VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 95.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
text = "Jouer"

[node name="cancel_choice_button" type="Button" parent="vbox_info/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 352.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
text = "Annuler le choix"

[node name="return_button" type="Button" parent="vbox_info/VBoxContainer/HBoxContainer"]
margin_left = 380.0
margin_right = 681.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
text = "Revenir à l'écran titre"

[node name="add_bot" type="Button" parent="vbox_info/VBoxContainer/HBoxContainer"]
margin_left = 709.0
margin_right = 880.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Ajouter Bot"

[node name="remove_bot" type="Button" parent="vbox_info/VBoxContainer/HBoxContainer"]
margin_left = 908.0
margin_right = 1070.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Retirer Bot"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PanelPlayerList" type="Panel" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 775.0
margin_top = 65.0
margin_right = 1146.0
margin_bottom = 317.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblLocalPlayer" type="Label" parent="HUD/PanelPlayerList"]
margin_left = -2.0
margin_top = 23.0
margin_right = 358.0
margin_bottom = 66.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Local player name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxList" type="VBoxContainer" parent="HUD/PanelPlayerList"]
margin_left = 9.0
margin_top = 66.0
margin_right = 363.0
margin_bottom = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelOnlineChat" type="Panel" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 773.0
margin_top = 432.0
margin_right = 1144.0
margin_bottom = 744.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/PanelOnlineChat"]
margin_right = 371.0
margin_bottom = 312.0
color = Color( 0.176471, 0.176471, 0.176471, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HUD/PanelOnlineChat"]
margin_top = 264.0
margin_right = 371.0
margin_bottom = 307.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="TextEdit" type="TextEdit" parent="HUD/PanelOnlineChat"]
margin_left = 3.0
margin_top = 8.0
margin_right = 371.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
readonly = true
show_line_numbers = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]

[node name="SceneTransitionRect" parent="." instance=ExtResource( 6 )]
visible = false
modulate = Color( 0, 0, 0, 1 )

[connection signal="bot_diff_changed_bis" from="MultipleCharacterDisplay" to="." method="_on_MultipleCharacterDisplay_bot_diff_changed_bis"]
[connection signal="item_selected" from="vbox_info/VBoxContainer/CenterContainer/characters" to="." method="_on_characters_item_selected"]
[connection signal="button_down" from="vbox_info/VBoxContainer/HBoxContainer/play_button" to="." method="_on_play_button_down"]
[connection signal="button_down" from="vbox_info/VBoxContainer/HBoxContainer/cancel_choice_button" to="." method="_on_cancel_choice_button_down"]
[connection signal="button_down" from="vbox_info/VBoxContainer/HBoxContainer/return_button" to="." method="_on_return_button_down"]
[connection signal="button_down" from="vbox_info/VBoxContainer/HBoxContainer/add_bot" to="." method="_on_add_bot_button_down"]
[connection signal="button_down" from="vbox_info/VBoxContainer/HBoxContainer/remove_bot" to="." method="_on_remove_bot_button_down"]
